# asteroids-game

./: .gitignore  CLAUDE.md  CLAUDE_architecture.md  CLAUDE_commands.md  CLAUDE_logging.md  CLAUDE_testing.md  README.md  asteroid.py  asteroidfield.py  circleshape.py  code-review.md  constants.py  feature-improvements.md  logger.py  main.py  particle.py  player.py  pyproject.toml  shot.py
tests/: test_game.py
